ref: update error codes and response with envelope
